Resolve "Ajouter un curseur de dates sur la carte"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,10 @@
     // utils
     "parseCSV": true,
     // indicators
-    "initIndicators": true
+    "initIndicators": true,
+    // year-range
+    "updateYearRange": true,
+    "updateYearDisplay": true,
+    "initYearRange": true
   }
 }
